<resources>
    <string name="app_name">Trouvaille</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_number_for_sign_in">Enter your number for Sign-in</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign-In</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_otp">verify otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_for_verification_and_sign_in">Enter OTP for verification and Sign-in!</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_otp_on_this_mobile_number">We will send you an OTP on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="phn_number">0123456789</string>
    <string name="ext">+91 </string>
    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="otp_hint">X X X X X X</string>
    <string name="didn_t_received_the_otp">Didn\'t received the OTP?</string>
    <string name="dependants">Dependants</string>
    <string name="overview">Overview</string>
    <string name="profile">Profile</string>
    <string name="we_need_your_information_to_save_in_database">We need your information to save in database</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_department">Enter your department</string>
    <string name="enter_your_designation">Enter your designation</string>
    <string name="enter_official_e_mail_id">Enter official E-mail Id</string>
    <string name="save">Save</string>
    <string name="welcome_aboard_we_are_looking_forward_to_work_with_you">Welcome aboard we are looking forward to work with you!</string>
    <string name="hey_there">Hey There!!</string>
    <string name="okay">Okay</string>
    <string name="home">Home</string>
    <string name="my_status">My Status</string>
    <string name="information">Information</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="department">Department</string>
    <string name="add_dependant">Add Dependant</string>
    <string name="name_of_dependant">Name of Dependant</string>
    <string name="relation_to_you">Relation to you</string>
    <string name="name">Name</string>
    <string name="relationship">Relationship</string>
    <string name="delete">Delete</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="no_internet">No Internet</string>
    <string name="wishlists">Wishlists</string>
    <string name="inbox">Inbox</string>
    <string name="trips">Trips</string>
    <string name="places_image">Places Image</string>
    <string name="more_details">More Details</string>
    <string name="try_to_find_your_place">Try to find your place...</string>
    <string name="popular_destinations">Popular Destinations</string>
    <string name="log_out">logout</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="let_s_create_your_profile">Let\'s create your profile.</string>
    <string name="next">Next</string>
    <string name="more_to_explore">More to Explore</string>
    <string name="add_friends">Add Friends</string>
    <string name="search_for_friends">Search for friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="confirm">Confirm</string>
    <string name="reject">reject</string>
    <string name="add">add</string>
    <string name="default_notification_channel_id">Firebase Channel</string>
    <string name="add_friend_message">You have new friend request!</string>
    <string name="search_conversations">Search conversations</string>
    <string name="friend_request">Friend Request</string>
    <string name="create_group">create group</string>
    <string name="new_chat">new chat</string>
    <string name="you_don_t_have_any_friends">You don\'t have any friends</string>
    <string name="search_for_groups">Search for groups</string>
    <string name="request">Requests</string>
    <string name="settings">Settings</string>
    <string name="exit_group">Exit group</string>
    <string name="user_icon">User Icon</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">send</string>
    <string name="new_group">New Group</string>
    <string name="add_to_my_trip">Add to my trip</string>
    <string name="suggest_to_group">Suggest to group</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="your_groups">Your Groups</string>
    <string name="yes">yes</string>
    <string name="you_already_voted">You already voted</string>
    <string name="start_the_vote">start the vote</string>
    <string name="search_in_your_wishlist">search in your wishlist</string>
    <string name="search_in_your_trips">search in your trips</string>
    <string name="nothing_found">Nothing to show here</string>

</resources>