<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/home" />

    <item
        android:id="@+id/wishListFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/wishlists" />

    <!--   <item
           android:id="@+id/tripsFragment"
           android:icon="@drawable/ic_book"
           android:title="@string/trips" /> -->
    <item
        android:id="@+id/inboxFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/inbox" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_accounts"
        android:title="@string/profile" />
</menu>