<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".account_screens.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways|snap">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:title="LOGIN"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topAppBar"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:id="@+id/login_input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="visible">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/login_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/plane" />


                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/cereal_bold"
                    android:text="@string/otp_verification"
                    android:textColor="@color/primaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/login_text_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/cereal_medium"
                    android:gravity="center"
                    android:text="@string/we_will_send_you_an_otp_on_this_mobile_number"
                    android:textColor="@color/secondaryText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/login_text_desc_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cereal_medium"
                    android:gravity="center"
                    android:text="@string/enter_mobile_number"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/cereal_bold"
                        android:text="@string/ext"
                        android:textColor="@color/primaryText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/phone_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:background="@null"
                        android:fontFamily="@font/cereal_bold"
                        android:gravity="center"
                        android:hint="@string/phn_number"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:paddingHorizontal="6dp"
                        android:textColor="?android:textColorPrimary" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="70dp"
                    android:background="@color/grey" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.widget.Button
                        android:id="@+id/auth_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:background="@drawable/sign_in_btn"
                        android:fontFamily="@font/cereal_medium"
                        android:foreground="@drawable/button_ripple"
                        android:text="@string/sign_in"
                        android:textAllCaps="true" />

                    <ProgressBar
                        android:id="@+id/progress_circular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_input_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="gone">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/login_image_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/otp" />


                <TextView
                    android:id="@+id/login_text_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/otp_verification"
                    android:textColor="@color/primaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/login_text_auto_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/enter_the_otp_send_to"
                    android:textColor="@color/secondaryText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/otp_sent_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/phone_edit_text_auto"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:fontFamily="@font/cereal_extrabold"
                    android:gravity="center"
                    android:hint="@string/otp_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:paddingHorizontal="16dp"
                    android:textColor="?android:textColorPrimary"
                    tools:ignore="TextFields" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="70dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/didn_t_received_the_otp" />

                    <TextView
                        android:id="@+id/resend_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/resend_code"
                        android:textAllCaps="true"
                        android:textColor="@color/red"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.widget.Button
                        android:id="@+id/auth_login_auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:layout_marginHorizontal="30dp"
                        android:background="@drawable/sign_in_btn"
                        android:fontFamily="@font/cereal_medium"
                        android:foreground="@drawable/button_ripple"
                        android:text="@string/verify_otp"
                        android:textAllCaps="true" />


                    <ProgressBar
                        android:id="@+id/progress_circular_verify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp" />
                </FrameLayout>


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>