<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.InboxFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/inbox_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/ic_close"
            app:tint="@color/mainTextColor" />

        <TextView
            android:id="@+id/inbox_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inbox_close"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/cereal_bold"
            android:text="@string/inbox"
            android:textColor="?android:textColorPrimary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/new_inbox_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inbox_close"
            android:layout_alignBaseline="@id/inbox_header"
            android:layout_alignBottom="@+id/inbox_header"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/cereal_medium"
           />

        <EditText
            android:id="@+id/inbox_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inbox_header"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/searchview_shape_view"
            android:drawableStart="@drawable/ic_search_v1"
            android:drawablePadding="12dp"
            android:fontFamily="@font/cereal_regular"
            android:hint="@string/search_conversations"
            android:maxLines="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="12dp"
            android:textColorHint="#C4C4C4"
            app:drawableTint="@color/mainTextColor" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inbox_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inbox_search"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_inbox" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="12dp"
        android:contentDescription="@string/add_friend"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>